--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-whitenoise==5.2.0
-Django==2.2
-gunicorn==20.0.4
-pytz==2020.5
+asgiref==3.5.2
+backports.zoneinfo==0.2.1
+Django==4.1.4
+sqlparse==0.4.3
